force-app/main/default/objects/DFJ_JournalDocfabFieldConfigurator__mdt/DFJ_JournalDocfabFieldConfigurator__mdt.object-meta.xml
<CustomObject>
    <label>DFJ_JournalDocfabFieldConfigurator</label>
    <pluralLabel>DFJ_JournalDocfabFieldsConfigurator</pluralLabel>
</CustomObject>