force-app/main/default/objects/DFJ_JournalDocfabFieldConfigurator__mdt/fields/Default_Field_Configurater__c.field-meta.xml
<CustomField>
    <fullName>Default_Field_Configurater__c</fullName>
    <label>Default Field Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>