force-app/main/default/objects/DFJ_JournalDocfabFieldConfigurator__mdt/fields/Field_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Field_Configuration__c</fullName>
    <label>Field Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>