force-app/main/default/objects/DFJ_JournalDocfabFieldConfigurator__mdt/fields/Market_unit__c.field-meta.xml
<CustomField>
    <fullName>Market_unit__c</fullName>
    <label>Market unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>